# hutash-app

./: .gitattributes
catalogue/: catalogue.json
community/: community.json
hutash-os/catalogue/: a1111.hutash  anythingllm.hutash  comfyui.hutash  forge.hutash  index.json  invokeai.hutash  localai.hutash  ollama.hutash  openwebui.hutash  rvc.hutash  whisper.hutash
hutash_inference/: .gitignore  __init__.py  base.py  errors.py  io_handlers.py  logging.py  pyproject.toml  server.py  test_low_vram.py  test_vram.py  validation.py  vram.py
models/ace-step-1.5/: ace-step-1.5.hutash  inference.py
models/chatterbox/: chatterbox.hutash  inference.py  manifest.json
models/dia-1.6b/: dia-1.6b.hutash  inference.py
models/distil-whisper-large-v3/: distil-whisper-large-v3.hutash  inference.py  manifest.json
models/kokoro/: inference.py  kokoro.hutash  manifest.json
models/parler-tts-mini-1.1/: inference.py  manifest.json  parler-tts-mini-1.1.hutash
models/prompt-engine/: inference.py  manifest.json  prompt-engine.hutash
models/whisper-large-v3/: inference.py  whisper-large-v3.hutash
models/whisper-tiny/: inference.py  whisper-tiny.hutash
notifications/: notifications.json
ratings/: ratings.json
releases/: latest.json
